## Specify Automake options:
# - 'foreign' allows for a non-GNU standard directory layout.
# - 'subdir-objects' ensures that object files are placed in subdirectories.
AUTOMAKE_OPTIONS = foreign subdir-objects

# Specify aclocal options to include macros from the m4 directory.
ACLOCAL_AMFLAGS = -I build-aux/m4

# General CFLAGS applied to all targets to enable optimizations and warnings:
# - '-Wall -Wextra -Wpedantic': Enable various warning messages.
# - '-O3': Enable high-level optimizations.
# - '-ftree-vectorize': Enable tree vectorization.
# - '-mavx512f -mavx512bw -mavx512cd -mavx512vl': Use AVX-512 instruction sets.
# - '-ffast-math': Enable fast math optimizations.
# - '-march=skylake-avx512': Optimize for Skylake AVX-512 architecture.
# - '-std=c99': Use the C99 standard.
# - '-march=native': Optimize for the architecture of the host machine.
# - '-fomit-frame-pointer': Omit the frame pointer for leaf functions.
# - '-flto': Enable link-time optimization.
CFLAGS = -Wall -Wextra -Wpedantic -O3 -ftree-vectorize -mavx512f -mavx512bw -mavx512cd -mavx512vl -ffast-math -march=skylake-avx512 -std=c99 -march=native -fomit-frame-pointer -flto

# Apply the general CFLAGS to all targets.
# AM_CFLAGS = $(CFLAGS)
AM_CFLAGS = -I$(srcdir)/include $(CFLAGS)

# Use libtool to create a shared library for the main SPHINCS+ library.
lib_LTLIBRARIES = libsphincsplus.la libkeccak8x.la

# Source files for the main library.
libsphincsplus_la_SOURCES = \
    src/address.c \
    src/fips202.c \
    src/fips202x8.c \
    src/wots.c \
    src/utils.c \
    src/utilsx8.c \
    src/fors.c \
    src/sign.c \
    src/randombytes.c \
    src/merkle.c \
    src/hash_shake256.c \
    src/hash_shake256x8.c \
    src/thash_shake256_robust.c \
    src/thash_shake256_robustx8.c \
    src/thash_shake256_simple.c \
    src/thash_shake256_simplex8.c

# Define linker flags for the library.
libsphincsplus_la_LDFLAGS = -version-info 0:0:0

# Define libraries within subdirectories (not installed).
# keccak8x library.
# noinst_LTLIBRARIES = libkeccak8x.la

# Source files for the keccak8x library.
libkeccak8x_la_SOURCES = \
    keccak8x/KeccakP-1600-times8-SIMD512.c

# Compiler flags for the keccak8x library.
libkeccak8x_la_CFLAGS = $(AM_CFLAGS) -I$(srcdir)/include

include_HEADERS = include/api.h
include_HEADERS += include/params.h

noinst_HEADERS = include/randombytes.h
noinst_HEADERS += include/address.h
noinst_HEADERS += include/wots.h
noinst_HEADERS += include/wotsx8.h
noinst_HEADERS += include/utils.h
noinst_HEADERS += include/utilsx8.h
noinst_HEADERS += include/fors.h
noinst_HEADERS += include/merkle.h
noinst_HEADERS += include/fips202.h
noinst_HEADERS += include/fips202x8.h
noinst_HEADERS += include/hash.h
noinst_HEADERS += include/hashx8.h
noinst_HEADERS += include/thash.h
noinst_HEADERS += include/thashx8.h
noinst_HEADERS += include/shake256_offsets.h
# noinst_HEADERS += include/params.h


# List of extra files to be distributed with the source package.
EXTRA_DIST = \
    keccak8x/align.h \
    keccak8x/brg_endian.h \
    keccak8x/SIMD512-config.h \
    keccak8x/KeccakP-1600-times8-SnP.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libsphincsplus.pc

# Files to be cleaned up by 'make clean', typically those generated by libtool.
CLEANFILES = $(lib_LTLIBRARIES)
